# healthmanagementapi/Entities/Patient.cs
@@ -1,11 +1,15 @@
-﻿namespace healthmanagementapi.Entities
+﻿using System.ComponentModel.DataAnnotations.Schema;
+
+namespace healthmanagementapi.Entities
 {
-    public class Patient:BaseEntityCommon
+    public class Patient
     {
+        [DatabaseGenerated(DatabaseGeneratedOption.Identity)]
+        public int Id { get; set; }
         public string Name { get; set; }
         public string Gender { get; set; }
         public string Address { get; set; }
-        public int HealthFacilityID { get; set; }
+        public int? HealthFacilityID { get; set; }
         public HealthFacility HealthFacility { get; set; }
     }
 }
